--- a/install/pbench_agent_bootstrap.yml
+++ b/install/pbench_agent_bootstrap.yml
@@ -19,6 +19,14 @@
         GIT_SSL_NO_VERIFY=true git clone {{ repos }}
       ignore_errors: yes
 
+    - name: copy keys to trafficgen host
+      shell: |
+        echo '{{ trafficgen_host.ssh_pass }}' | sshpass ssh-copy-id -i ~/.ssh/id_rsa -o 'StrictHostKeyChecking no' -f {{ trafficgen_host.ssh_user }}@{{ trafficgen_host.ip }}
+      register: ssh_result
+      changed_when: false
+      ignore_errors: true
+      when: trafficgen_host is defined
+
     - name: get computes ip
       shell: |
         . {{ stackrc }}
